--- a/homework_solutions.qmd
+++ b/homework_solutions.qmd
@@ -13,12 +13,13 @@ editor_options:
 * Below are links to homework solutions.
 * Accessing solutions will require signing into Sakai. 
 * **[Solutions will not be accessible until after their due date.]{style="color:darkorange"}** 
+* **Homework number will appear as [green]{style="color:green"} for solutions that are available on Sakai.** 
 * *If you try accessing them earlier you will get a "file not found" page from Sakai.*
 :::
 
 | HW  |                                                      qmd file                                                       | html file                                                                                                             |
 |:-------------------:|:-------------------------:|:------------------------|
-|  1  |  [qmd](https://sakai.ohsu.edu/access/content/group/BSTA-511-1-AA-F24/HW_solutions/HW_1_F24_bsta511_Solutions.qmd)   | [html](https://sakai.ohsu.edu/access/content/group/BSTA-511-1-AA-F24/HW_solutions/HW_1_F24_bsta511_Solutions.html)    |
+|  **[1]{style="color:green"}**  |  [qmd](https://sakai.ohsu.edu/access/content/group/BSTA-511-1-AA-F24/HW_solutions/HW_1_F24_bsta511_Solutions.qmd)   | [html](https://sakai.ohsu.edu/access/content/group/BSTA-511-1-AA-F24/HW_solutions/HW_1_F24_bsta511_Solutions.html)    |
 |  2  |  [qmd](https://sakai.ohsu.edu/access/content/group/BSTA-511-1-AA-F24/HW_solutions/HW_2_F24_bsta511_Solutions.qmd)   | [html](https://sakai.ohsu.edu/access/content/group/BSTA-511-1-AA-F24/HW_solutions/HW_2_F24_bsta511_Solutions.html)    |
 |  3  |  [qmd](https://sakai.ohsu.edu/access/content/group/BSTA-511-1-AA-F24/HW_solutions/HW_3_F24_bsta511_Solutions.qmd)   | [html](https://sakai.ohsu.edu/access/content/group/BSTA-511-1-AA-F24/HW_solutions/HW_3_F24_bsta511_Solutions.html)    |
 |  4  |  [qmd](https://sakai.ohsu.edu/access/content/group/BSTA-511-1-AA-F24/HW_solutions/HW_4_F24_bsta511_Solutions.qmd)   | [html](https://sakai.ohsu.edu/access/content/group/BSTA-511-1-AA-F24/HW_solutions/HW_4_F24_bsta511_Solutions.html)    |
