--- a/weeks/week_04.qmd
+++ b/weeks/week_04.qmd
@@ -40,9 +40,9 @@ editor_options:
 | 6 | Random Variables (3.1.1-3.1.3) | [Day 6: slides 1-6](../slides/Day06_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../LaTeX_slides/Day06_bsta511.pdf) |  | [{{< iconify pepicons-pop pen-circle-filled size=20px >}}](../LaTeX_slides/Day06_bsta511_notes.pdf) | [Day 6 Part 1](https://echo360.org/lesson/6b3df5b4-2997-43af-81b7-91da94b7100f/classroom#sortDirection=desc) | 24 min |  |  |
 |  | Linear combinations of RV's (3.1.4) | [Day 6: slides 7-10](../slides/Day06_bsta511.qmd) | same |  | same | [Day 6 Part 2](https://echo360.org/lesson/a191ba39-ebb5-4421-8ee1-67348d3e6f57/classroom#sortDirection=desc) | 14 min |  |  |
 |  | Binomial dist (3.2) | [Day 6: slides 11-15](../slides/Day06_bsta511.qmd) | same |  | same | [Day 6 Part 3](https://echo360.org/lesson/907b2ae8-1572-44e8-a632-c64ed8fe67b3/classroom#sortDirection=desc) | 27 min |  |  |
-| 7 | Normal dist and prob's for standard normal  (3.3.1, 3.3.3) | [Day 7: slides 1-5](../slides/Day07_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../LaTeX_slides/Day07_bsta511.pdf) |  | [{{< iconify pepicons-pop pen-circle-filled size=20px >}}](../LaTeX_slides/Day07_bsta511_notes.pdf) | [Day 7 Part 1](https://echo360.org/lesson/6d845f5b-d50f-4aeb-af90-7eaded81ab99/classroom#sortDirection=desc) | 27 min |  |  |
+| 7 | Normal dist and prob's for standard normal (3.3.1, 3.3.3) | [Day 7: slides 1-5](../slides/Day07_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../LaTeX_slides/Day07_bsta511.pdf) |  | [{{< iconify pepicons-pop pen-circle-filled size=20px >}}](../LaTeX_slides/Day07_bsta511_notes.pdf) | [Day 7 Part 1](https://echo360.org/lesson/6d845f5b-d50f-4aeb-af90-7eaded81ab99/classroom#sortDirection=desc) | 27 min |  |  |
 |  | Normal prob's using z-scores (3.3.2, 3.3.4) | [Day 7: slides 6-7](../slides/Day07_bsta511.qmd) | same |  | same | [Day 7 Part 2](https://echo360.org/lesson/c42e49bf-a852-403f-b13d-2f47cb36accf/classroom#sortDirection=desc) | 15 min |  |  |
-|  | Normal approx of  binomial dist (3.3.6) | [Day 7: slides 8-9](../slides/Day07_bsta511.qmd) | same |  | same | [Day 7 Part 3](https://echo360.org/lesson/7e84a51f-7d39-47fe-a27d-84974592ce65/classroom#sortDirection=desc) | 14 min |  |  |
+|  | Normal approx of binomial dist (3.3.6) | [Day 7: slides 8-9](../slides/Day07_bsta511.qmd) | same |  | same | [Day 7 Part 3](https://echo360.org/lesson/7e84a51f-7d39-47fe-a27d-84974592ce65/classroom#sortDirection=desc) | 14 min |  |  |
 |  | Poisson dist (3.4) | [Day 7: slides 10-12](../slides/Day07_bsta511.qmd) | same |  | same | [Day 7 Part 4](https://echo360.org/lesson/cf2c19ad-62b5-44b5-ac0a-f85a32f0e599/classroom#sortDirection=desc) | 15 min |  |  |
 
 : {.striped .hover tbl-colwidths="\[3, 10, 8, 5, 5, 5, 6, 6, 5, 5\]"}
@@ -83,3 +83,16 @@ During class you will be working in groups discussing the following:
 -   Make sure to check out the calculating probabilities in R code file: [qmd](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Probability_distributions_in_R_bsta511.qmd), [html](../slides_code/Probability_distributions_in_R_bsta511.qmd)
 -   Note: the answer to exercise 3.31(b) in the textbook (not assigned) is incorrect.
     -   Check out this [spreadsheet](https://docs.google.com/spreadsheets/d/1k_NivXZftdlRgRyTT3fUZCndW4eoXCzAs-DEIml6K3Y/edit?gid=0#gid=0) for more typos in book.
+
+## Exam 1 information
+
+- Exam 1 will be on Wed, Oct. 30th
+-   Samples of [past exam questions](https://sakai.ohsu.edu/access/content/group/BSTA-511-1-AA-F24/Exam_samples/Exam_1_samples_Ch1-Ch3.4.pdf) and [answers](https://sakai.ohsu.edu/access/content/group/BSTA-511-1-AA-F24/Exam_samples/Exam_1_samples_Ch1-Ch3.4%20answers.pdf) (on Sakai)
+-   Material will cover **Days 1-7**,
+    -   which is approximately **Chapters 1, 2, 3.1-3.4** from the textbook.
+-   The exam will be in-class and handwritten. *Bring a calculator.*
+-   You may bring one page of notes on an 8.5” x 11” sheet of paper.
+    -   You may use both sides.
+    -   You may type your notes.
+    -   You may **not** use screenshots of the notes or textbook
+    -   You will be turning in the page of notes with the exam, so please add your name to the sheet.
