--- a/schedule.qmd
+++ b/schedule.qmd
@@ -27,7 +27,7 @@ editor_options:
 |                         | W 10/30 |       | **[Exam 1: Days 1-7](weeks/week_05.qmd#sec-Exam1info)**                                                                             | **Ch 1, 2, 3.1-3.4**                   |
 |  6                      | M 11/4  | **9** | Confidence Intervals                                                                             | 4.2                                    |
 |                         | W 11/6  | **10**| Hypothesis Testing: <br> Single-sample with *t*-distribution <br> & Two-sample paired data       | 4.3, 5.1, 5.2                          |
-|                         | Sa 11/9 |       | HW 4 Due (Days 8 - 10)                                                                           |                                        |
+|                         | Sa 11/9 |       | [HW 4 Due](homework/HW_4_F24_bsta511.qmd) (Days 8 - 10)                                                                           |                                        |
 |  7                      | M 11/11 | **11**| Hypothesis Testing: <br> Two-sample independent data; <br> Power                                 | 5.3-5.4, extra                         |
 |                         | W 11/13 | **12**| Inference for a single proportion <br> or difference in proportions                              | 8.1-8.2                                |
 |                         | Sa 11/16|       | HW 5 Due (Days 11 - 12)                                                                          |                                        |
