--- a/weeks/week_05.qmd
+++ b/weeks/week_05.qmd
@@ -44,17 +44,17 @@ editor_options:
 
 During class you will be working in groups discussing the following:
 
-### Day 8 - UPDATE
+### Day 8 
 
 -   Slide 21: match figures to distribution (Sampling high schoolers’ weights)
 -   Problems from Homework 4:
+    -   Book exercise: 4.2 (warm-up)
     -   R1: Youth weights (YRBSS)
-    -   Book exercise: 4.2
     -   Non-book exercise: Ethan Allen
 
-## Homework - coming soon!
+## Homework 
 
--   HW 4 covers Days 8 -10 and is due on Sat, 11/9
+-   [HW 4](../homework/HW_4_F24_bsta511.qmd) covers Days 8 -10 and is due on Sat, 11/9
 -   Check out this [spreadsheet](https://docs.google.com/spreadsheets/d/1k_NivXZftdlRgRyTT3fUZCndW4eoXCzAs-DEIml6K3Y/edit?gid=0#gid=0) for typos in book.
 
 ## Exam 1 information {#sec-Exam1info}
