--- a/weeks/week_06.qmd
+++ b/weeks/week_06.qmd
@@ -29,7 +29,8 @@ editor_options:
 -   Hypothesis testing for one mean (single-sample): Section 4.3, 5.1
 -   CIs vs. hypothesis tests
 -   Inference for two-sample paired data: Section 5.2
--   R projects, `here::here()`, and loading data into R from a file
+-   __R projects__, `here::here()`, and loading data into R from a file
+    -   __See [Projects in RStudio](../resources/Projects_in_R.qmd) file for more information__
 -   Running a `t.test` in R
 :::
 :::::
@@ -43,12 +44,21 @@ editor_options:
 | 9 | CI's for 1 mean: 4.2 | [Day 9: slides 1-12](../slides/Day09_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../slides_pdf/Day09_bsta511.pdf) | [{{< iconify streamline web size=20px >}}](../slides_md/Day09_bsta511_md.qmd) | [{{< iconify pepicons-pop pen-circle-filled size=20px >}}](../slides_notes/Day09_bsta511_notes.pdf) | [Day 9 Part 1](https://echo360.org/lesson/49845aaf-0a16-40ee-ad8f-9a0eed89561f/classroom#sortDirection=desc) | 17 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day09_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day09_bsta511_code.qmd) |
 |  | 4.2 con'td | [Day 9: slides 13-19](../slides/Day09_bsta511.qmd#/how-to-interpret-a-c-i-12) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day09_bsta511_md.qmd#how-to-interpret-a-c-i-12) | same | [Day 9 Part 2](https://echo360.org/lesson/0a8e8094-9093-4d7a-b627-d5b4093aa3d7/classroom#sortDirection=desc) | 17 min | same | same |
 |  | 4.2 con'td, 5.1.1, 5.1.2 (pgs. 238-242) | [Day 9: slides 20-23](../slides/Day09_bsta511.qmd#/calculating-the-c-i-for-the-population-mean-using-s) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day09_bsta511_md.qmd#calculating-the-c-i-for-the-population-mean-using-s) | same | [Day 9 Part 3](https://echo360.org/lesson/c6a7b108-10ce-401c-b9e8-712388f4e852/classroom#sortDirection=desc) | 14 min | same | same |
-| 10 part 1 | Hyp test 1 mean intro | [Day 10: slides 1-13](../slides/Day10_part1_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../slides_pdf/Day10_part1_bsta511.pdf) | [{{< iconify streamline web size=20px >}}](../slides_md/Day10_part1_bsta511_md.qmd) | [{{< iconify pepicons-pop pen-circle-filled size=20px >}}](../slides_notes/Day10_part1_bsta511_notes.pdf) | [Day 9 Part 1](https://echo360.org/lesson/49845aaf-0a16-40ee-ad8f-9a0eed89561f/classroom#sortDirection=desc) | 17 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day10_part1_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day10_part1_bsta511_code.qmd) |
-|  | Hyp test steps: 4.3, 5.1 | [Day 10: slides 14-25](../slides/Day10_part1_bsta511.qmd#/steps-in-a-hypothesis-test) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day10_part1_bsta511_md.qmd#steps-in-a-hypothesis-test) | same | [Day 9 Part 2](https://echo360.org/lesson/0a8e8094-9093-4d7a-b627-d5b4093aa3d7/classroom#sortDirection=desc) | 17 min | same | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day10_part1_bsta511_code.qmd#steps-in-a-hypothesis-test) |
-|  | R demo | [Day 10: slides 26-34](../slides/Day10_part1_bsta511.qmd#/running-a-t-test-in-r) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day10_part1_bsta511_md.qmd#running-a-t-test-in-r) | same | [Day 9 Part 3](https://echo360.org/lesson/c6a7b108-10ce-401c-b9e8-712388f4e852/classroom#sortDirection=desc) | 14 min | same | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day10_part1_bsta511_code.qmd#running-a-t-test-in-r) |
-|  |  |  |  |  |  |  |  |  |  |
+| 10 part 1 | Hyp test 1 mean intro | [Day 10 Part 1: slides 1-13](../slides/Day10_part1_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../slides_pdf/Day10_part1_bsta511.pdf) | [{{< iconify streamline web size=20px >}}](../slides_md/Day10_part1_bsta511_md.qmd) | [{{< iconify pepicons-pop pen-circle-filled size=20px >}}](../slides_notes/Day10_part1_bsta511_notes.pdf) | [Day 10 Part 1](https://echo360.org/lesson/68afabcf-82d3-4de6-8bab-1ff39f1b18fd/classroom#sortDirection=desc) | 26 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day10_part1_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day10_part1_bsta511_code.qmd) |
+|  | Hyp test steps: 4.3, 5.1 | [Day 10 Part 1: slides 14-25](../slides/Day10_part1_bsta511.qmd#/steps-in-a-hypothesis-test) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day10_part1_bsta511_md.qmd#steps-in-a-hypothesis-test) | same | [Day 10 Part 2](https://echo360.org/lesson/2ab2f4d3-9a1c-42ea-aee9-c19158171058/classroom#sortDirection=desc) | 36 min | same | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day10_part1_bsta511_code.qmd#steps-in-a-hypothesis-test) |
+|  | R demo | [Day 10 Part 1: slides 26-34](../slides/Day10_part1_bsta511.qmd#/running-a-t-test-in-r) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day10_part1_bsta511_md.qmd#running-a-t-test-in-r) | same | [Day 10 Part 3](https://echo360.org/lesson/249fd75c-de00-451a-89c6-aa7b72ec56ab/classroom#sortDirection=desc) | 25 min | same | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day10_part1_bsta511_code.qmd#running-a-t-test-in-r) |
+| 10 part 2 |  | [Day 10 Part 2](../slides/Day10_part2_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../slides_pdf/Day10_part2_bsta511.pdf) | [{{< iconify streamline web size=20px >}}](../slides_md/Day10_part2_bsta511_md.qmd) |  | No recording |  | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day10_part2_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day10_part2_bsta511_code.qmd) |
 
 : {.striped .hover tbl-colwidths="\[3, 10, 8, 5, 5, 5, 6, 6, 5, 5\]"}
+
+
+## Datasets
+
+All datasets can be found on [GitHub](https://github.com/niederhausen/BSTA_511_F24/tree/main/data)
+
+* [BodyTemperatures.csv](/data/BodyTemperatures.csv)
+* [chol213.csv](/data/chol213.csv)
+
 
 ## Class discussion
 
@@ -64,6 +74,8 @@ During class you will be working in groups discussing the following:
 
 ### Day 10
 
+-   Work through Day 10 Part 2 slides
+    -   *There are specific questions in orange on (most) slides.*
 -   Problems from Homework 4:
     -   Book exercises:
         -   5.16 (warm-up)
