--- a/schedule.qmd
+++ b/schedule.qmd
@@ -25,7 +25,7 @@ editor_options:
 |                         | Sa 10/26|       | [HW 3 Due](homework/HW_3_F24_bsta511.qmd) (Days 6 - 7)                                                                            |                                        |
 |  [5](weeks/week_05.qmd) | M 10/28 | **8** | Variability in estimates                                                                         | 4.1                                    |
 |                         | W 10/30 |       | **[Exam 1: Days 1-7](weeks/week_05.qmd#sec-Exam1info)**                                                                             | **Ch 1, 2, 3.1-3.4**                   |
-|  6                      | M 11/4  | **9** | Confidence Intervals                                                                             | 4.2                                    |
+|  [6](weeks/week_06.qmd) | M 11/4  | **9** | Confidence Intervals                                                                             | 4.2                                    |
 |                         | W 11/6  | **10**| Hypothesis Testing: <br> Single-sample with *t*-distribution <br> & Two-sample paired data       | 4.3, 5.1, 5.2                          |
 |                         | Sa 11/9 |       | [HW 4 Due](homework/HW_4_F24_bsta511.qmd) (Days 8 - 10)                                                                           |                                        |
 |  7                      | M 11/11 | **11**| Hypothesis Testing: <br> Two-sample independent data; <br> Power                                 | 5.3-5.4, extra                         |
