--- a/weeks/week_07.qmd
+++ b/weeks/week_07.qmd
@@ -61,15 +61,17 @@ During class you will be working in groups discussing the following:
 
 ### Day 11
 
--   Book 5.26 a-b (HW includes part (c) as well)
--   R1: DDS expenditures by ethnicity
+-   Book 5.26 a-b
+-   R1: DDS expenditures by ethnicity (parts a-l)
 -   PSS1: Book 4.22 - Power & sample size T/F questions
 -   PSS2: Power & sample size calculations
 
 ### Day 12
 
--   Book 8.2, 8.14, 8.24 (plus extra (d))
--   PSS1: Legalize Marijuana, Part III
+-   Book
+    -   8.2 (warm-up),
+    -   8.8 (see instructions in HW),
+    -   8.24 (see instructions in HW)
 
 ## Homework
 
