--- a/schedule.qmd
+++ b/schedule.qmd
@@ -31,9 +31,9 @@ editor_options:
 |  [7](weeks/week_07.qmd) | M 11/11 | **11**| Hypothesis Testing: <br> Two-sample independent data; <br> Power                                 | 5.3-5.4, extra                         |
 |                         | W 11/13 | **12**| Inference for a single proportion <br> or difference in proportions                              | 8.1-8.2                                |
 |                         | Sa 11/16|       | [HW 5 Due](homework/HW_5_F24_bsta511.qmd) (Days 11 - 12)                                         |                                        |
-|  8                      | M 11/18 | **13**| Chi-squared tests, <br> Fishers exact test                                                       | 8.3-8.4                                |
+|  [8](weeks/week_08.qmd) | M 11/18 | **13**| Chi-squared tests, <br> Fishers exact test                                                       | 8.3-8.4                                |
 |                         | W 11/20 | **14**| Comparing Means with ANOVA.                                                                      | 5.5, extra                             |
-|                         | Sa 11/23|       | HW 6 Due (Days 13 - 14)                                                                          |                                        |
+|                         | Sa 11/23|       | [HW 6 Due](homework/HW_6_F24_bsta511.qmd) (Days 13 - 14)                                         |                                        |
 |  9                      | M 11/25 |       | **Exam 2: Days 8-13**                                                                            | **Ch 4, 5.1-5.4; <br> extra, 8.1-8.4** |
 |                         | W 11/27 | **15**| Simple Linear Regression                                                                         | 6.1-6.2                                |
 |  10                     | M 12/2  | **16**| Simple Linear Regression                                                                         | 6.3-6.4                                |
