--- a/weeks/week_08.qmd
+++ b/weeks/week_08.qmd
@@ -61,14 +61,16 @@ During class you will be working in groups discussing the following:
 
 ### Day 13
 
--   Book #8.28, 8.34, 8.38 (modified; see assignment), 8.32
+-   Questions from HW 6
+    -   Book: 8.28 (warm-up), 8.34, 8.38 (modified; see assignment)
 
 ### Day 14
 
 -   Slide 12: “Hypothetical examples” question
 -   Slide 29 questions
 -   Questions from HW 6
-    -   Book \# 5.46, 5.48, R1, 5.44
+    -   Book 5.44, 5.48
+    -   R1: Palmer Penguins ANOVA
 
 ## Homework
 
